# coretop

./: CMakeLists.txt  README.md  ROADMAP.md
include/: CPU.hpp  UI.hpp  memory.hpp
src/: CPU.cpp  UI.cpp  main.cpp  memory.cpp
